# Trackr

./: .env  .gitignore  .pre-commit-config.yaml  README.md
object-tracker/: .coverage  .dockerignore  .env.dev  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  alembic.ini  app.py  backend.Dockerfile  coverage.xml  docker-compose.yml  frontend.Dockerfile  get_sample_video.py  list_routes.py  mkdocs.yml  pyproject.toml  requirements.txt  run_dev.ps1  test_api.py  test_get.py  test_methods.py  test_router.py  trackr.db  verify.py
object-tracker/.github/: PULL_REQUEST_TEMPLATE.md
object-tracker/alembic/: env.py
object-tracker/api/: deps.py  main.py
object-tracker/config/: settings.py  zones.json
object-tracker/core/: dependencies.py  events.py  exceptions.py  job_manager.py  logging.py  metrics.py  model_manager.py  plugin_manager.py  profiler.py  security.py  stream_manager.py
object-tracker/db/: database.py  models.py  schemas.py
object-tracker/docs/: ENTERPRISE.md  api-reference.md  architecture.md  backup-recovery.md  deployment.md  examples.md  faq.md  index.md  installation.md  maintenance.md  models.md  monitoring.md  performance.md  plugins.md  quick-start.md  runbook.md  sdk.md  security-review.md  troubleshooting.md
object-tracker/examples/: demo.py
object-tracker/frontend/: app.py  style.css
object-tracker/services/: audit_service.py  job_service.py  stream_service.py  video_service.py
object-tracker/tests/: benchmark.py  conftest.py
(+57 files in other folders)
