[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trackr-sdk"
version = "1.0.0"
description = "Official Python SDK and CLI for the Trackr Computer Vision Platform"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.1",
    "websockets>=10.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=10.0.0"
]

[project.scripts]
trackr = "trackr_sdk.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["trackr_sdk"]
